# cmake_example

./: CMakeLists.txt
include/: hello.hpp
src/: hello.cpp
test/: test_hello.cpp
